force-app/main/default/objects/Order_Line_Item__c/Order_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Individual product line items within a Sales Order capturing quantity, pricing, and scheme details (MOD-05 Order Management)</description>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>OLI-{00000}</displayFormat>
        <label>Order Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>