force-app/main/default/objects/Order_Line_Item__c/fields/Base_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Base_Quantity__c</fullName>
    <description>Quantity converted to the product base UOM for accurate reporting and stock management</description>
    <label>Base Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>