force-app/main/default/objects/Order_Line_Item__c/fields/Base_UOM__c.field-meta.xml
<CustomField>
    <fullName>Base_UOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product base UOM at time of order (denormalized for reporting)</description>
    <label>Base UOM</label>
    <referenceTo>UOM__c</referenceTo>
    <relationshipLabel>Order Line Items (Base UOM)</relationshipLabel>
    <relationshipName>Order_Line_Items_Base_UOM</relationshipName>
    <type>Lookup</type>
</CustomField>