force-app/main/default/objects/Order_Line_Item__c/fields/Batch_Master__c.field-meta.xml
<CustomField>
    <fullName>Batch_Master__c</fullName>
    <label>Batch</label>
    <type>Lookup</type>
    <referenceTo>Batch_Master__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>