force-app/main/default/objects/Order_Line_Item__c/fields/Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Factor__c</fullName>
    <description>Conversion factor used at time of order (snapshot). Multiply order qty by this to get base qty.</description>
    <label>Conversion Factor</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>