force-app/main/default/objects/Order_Line_Item__c/fields/MRP__c.field-meta.xml
<CustomField>
    <fullName>MRP__c</fullName>
    <label>MRP</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>