force-app/main/default/objects/Order_Line_Item__c/fields/Order_UOM__c.field-meta.xml
<CustomField>
    <fullName>Order_UOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The UOM the sales rep ordered in (links to UOM master)</description>
    <label>Order UOM</label>
    <referenceTo>UOM__c</referenceTo>
    <relationshipLabel>Order Line Items (Order UOM)</relationshipLabel>
    <relationshipName>Order_Line_Items_Order_UOM</relationshipName>
    <type>Lookup</type>
</CustomField>