force-app/main/default/objects/Order_Line_Item__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <label>Price List</label>
    <description>The Price_List__c record whose Unit_Price was applied to this line. Set at save-time by OMS_OrderPricing_Service so the pricing source can be audited and rehydrated when a draft order is re-opened for edit.</description>
    <type>Lookup</type>
    <referenceTo>Price_List__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>