force-app/main/default/objects/Order_Line_Item__c/fields/Product_Ext__c.field-meta.xml
<CustomField>
    <fullName>Product_Ext__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items_Ext</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>