force-app/main/default/objects/Order_Line_Item__c/fields/Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>Reward_Points__c</fullName>
    <label>Reward Points</label>
    <description>Reward points earned from scheme on this line item</description>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>