force-app/main/default/objects/Order_Line_Item__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <label>Sales Order</label>
    <type>MasterDetail</type>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>