force-app/main/default/objects/Order_Line_Item__c/fields/Scheme_Category__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Category__c</fullName>
    <label>Scheme Category</label>
    <description>Category of the applied scheme benefit</description>
    <type>Text</type>
    <length>100</length>
</CustomField>