force-app/main/default/objects/Order_Line_Item__c/fields/Scheme_Discount__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Scheme Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>