force-app/main/default/objects/Order_Line_Item__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pieces</fullName>
                <default>true</default>
                <label>Pieces</label>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Boxes</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>Liters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>