force-app/main/default/objects/Order_Line_Item__c/validationRules/Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Required</fullName>
    <active>true</active>
    <description>Ensures a product is selected for every order line item</description>
    <errorConditionFormula>ISBLANK(Product_Ext__c)</errorConditionFormula>
    <errorDisplayField>Product_Ext__c</errorDisplayField>
    <errorMessage>Product is required for each line item.</errorMessage>
</ValidationRule>