force-app/main/default/objects/Order_Line_Item__c/validationRules/Quantity_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Ensures order line item quantity is greater than zero</description>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>