force-app/main/default/objects/Order_Line_Item__c/validationRules/Unit_Price_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Price_Non_Negative</fullName>
    <active>true</active>
    <description>Ensures order line item unit price is not negative</description>
    <errorConditionFormula>Unit_Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Unit_Price__c</errorDisplayField>
    <errorMessage>Unit Price cannot be negative.</errorMessage>
</ValidationRule>